--- a/app/views/administrate/application/_navigation.html.erb
+++ b/app/views/administrate/application/_navigation.html.erb
@@ -18,5 +18,6 @@ as defined by the routes in the `admin/` namespace
     ) if valid_action?(:index, resource) && show_action?(:index, model_from_resource(resource)) %>
   <% end %>
 
+  <%= link_to("Info Snow Feed", admin_info_snow_path, class: "navigation__link navigation__link--info-snow}")  %>
   <%= link_to("Sign out", destroy_user_session_path, method: :delete, class: "navigation__link navigation__link--sign-out}")  %>
 </nav>
