--- a/app/views/admin/application/_notification.html.erb
+++ b/app/views/admin/application/_notification.html.erb
@@ -2,7 +2,7 @@
   <div class="flashes">
 
       <div class="flash flash-alert">
-        There is an active <%= link_to 'notification', admin_notifications_path %> that is being pushed to all device. To turn it off, please uncheck the <i>pushed</i> checkbox.
+        There is an active <%= link_to 'notification', admin_notifications_path %> that is being pushed to all devices. To turn it off, please uncheck the <i>pushed</i> checkbox.
       </div>
 
   </div>
