--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BoscoGurin</title>
+    <title>Bosco Gurin</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <% Administrate::Engine.stylesheets.each do |css_path| %>
+      <%= stylesheet_link_tag css_path %>
+    <% end %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="main-container">
+      <h1>Bosco Gurin</h1>
+      <%= yield %>
+    </div>
   </body>
 </html>
