--- a/app/views/administrate/application/index.html.erb
+++ b/app/views/administrate/application/index.html.erb
@@ -42,14 +42,8 @@ It renders the `_table` partial to display details about the resources.
   <% end %>
 
   <div>
-    <%= link_to(
-            t(
-                "administrate.actions.new_resource",
-                name: display_resource_name(page.resource_name, singular: true).downcase
-            ),
-            [:new, namespace, page.resource_path],
-            class: "button",
-        ) if valid_action?(:new) && show_action?(:new, new_resource) %>
+    <%= link_to(t("administrate.actions.new_resource", name: display_resource_name(page.resource_name, singular: true).downcase ),
+            [:new, namespace, page.resource_path.to_sym], class: "button") if valid_action?(:new) && show_action?(:new, new_resource) %>
   </div>
 
 
